distortion bug resolved

--- a/src/app/sliced-image/sliced-image.component.scss
+++ b/src/app/sliced-image/sliced-image.component.scss
@@ -1,9 +1,15 @@
 :host {
   text-align: center;
 }
+
+.sliced-image {
+  position: relative;
+}
+
 canvas {
   cursor: crosshair;
 }
+
 .thumbnail {
   cursor: pointer;
 }
